[Change] code style - add code block to every if and for statement - replace `if (x == true)` to `if (x)` - replace `if (x) {return true;} else {return false;}` to `return x;` - use inline if statement `(x ? a : b)` - rewriting some conditions to merge two or more if statements - use try-with-resource statement - remove some line break